--- a/furcula.html
+++ b/furcula.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>The Furcula</h1>
+  <h1>What is a Furcula?</h1>
   
   <!-- Add a picture of a dinosaur here -->
   <img src="dino-picture-1.jpg" alt="Dinosaur with furcula">
