--- a/furcula.html
+++ b/furcula.html
@@ -48,7 +48,7 @@
 <body>
   <h1>What is a Furcula?</h1>
   <!-- Add a picture of a dinosaur here -->
-  <img src="dinopic1.jpg" height=200 width=200 alt="Dinosaur with furcula"> 
+  <img src="dinopic1.jpg" height=144 alt="Dinosaur with furcula"> 
   <p>The wishbone, or furcula, is like a secret superhero bone found in birds. Imagine it as a V-shaped bone that helps birds fly better. But here’s the really cool part: this bone has been around for a super long time, even before birds!</p>
   <p>Way back when dinosaurs roamed the Earth, some of them had furculas too. It's like they had a sneak peek of what was to come – birds! Scientists think that the furcula might have been one of the first steps towards birds learning to fly. So, in a way, dinosaurs were the pioneers of flight!</p>
   <!-- Add a picture of a bird here -->
