--- a/furcula.html
+++ b/furcula.html
@@ -30,7 +30,7 @@
       100% { background-position: right bottom; }
     }
     img {
-      width: 50%; /* Make images 50% of the page width */
+      width: 40%;
       margin: 20px;
       border: 1px solid #ccc;
     }
