--- a/furcula.html
+++ b/furcula.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Furcula</title>
   <style>
-    /* Add some basic styling to make the page look decent */
+    
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
       font-size: 1.2em;
       line-height: 1.6;
-      background: linear-gradient(to bottom, white, #ADD8E6); /* Add this line for the background gradient */
+      background: linear-gradient(to bottom, white, #ADD8E6);
     }
     h1 {
       font-size: 3em;
       text-align: center;
-      background: linear-gradient(to right, #0000ff, #ffff00); /* Change blue to yellow */
+      background: linear-gradient(to right, #0000ff, #ffff00);
       background-size: 200% 100%;
       background-position: right bottom;
       -webkit-background-clip: text;
@@ -37,7 +37,7 @@
     p {
       font-size: 1.1em;
     }
-    /* Add small text at the bottom */
+    
     footer {
       font-size: 0.8em;
       text-align: center;
