--- a/furcula.html
+++ b/furcula.html
@@ -52,7 +52,7 @@
   <p>The wishbone, or furcula, is like a secret superhero bone found in birds. Imagine it as a V-shaped bone that helps birds fly better. But here’s the really cool part: this bone has been around for a super long time, even before birds!</p>
   <p>Way back when dinosaurs roamed the Earth, some of them had furculas too. It's like they had a sneak peek of what was to come – birds! Scientists think that the furcula might have been one of the first steps towards birds learning to fly. So, in a way, dinosaurs were the pioneers of flight!</p>
   <!-- pic2 -->
-  <img src="Fucula.jpg" height=200 width=200 alt="Bird with furcula">
+  <img src="Fucula.jpg"  alt="Bird with furcula">
   <p>Now, if we look at the furcula of dinosaurs and compare it to birds today, we see some amazing similarities. Both have this V-shape that helps make their wings stronger. It's like having a built-in support system for flying. Plus, both dinosaurs and birds use their furcula for muscles that help them flap their wings, giving them the power to soar through the sky.</p>
   <p>But there are some differences too. Some dinosaurs had furculas that weren’t as developed as those of birds. This might mean they didn’t fly the same way modern birds do. And if you look at different bird species, you’ll notice that their wishbones can look really different. That’s because each bird has its own special way of flying, and their furcula helps them do it just right.</p>
   <!-- Add a picture of a dinosaur fossil here -->
