--- a/furcula.html
+++ b/furcula.html
@@ -55,8 +55,8 @@
   <img src="Fucula.jpg"  alt="Bird with furcula">
   <p>Now, if we look at the furcula of dinosaurs and compare it to birds today, we see some amazing similarities. Both have this V-shape that helps make their wings stronger. It's like having a built-in support system for flying. Plus, both dinosaurs and birds use their furcula for muscles that help them flap their wings, giving them the power to soar through the sky.</p>
   <p>But there are some differences too. Some dinosaurs had furculas that weren’t as developed as those of birds. This might mean they didn’t fly the same way modern birds do. And if you look at different bird species, you’ll notice that their wishbones can look really different. That’s because each bird has its own special way of flying, and their furcula helps them do it just right.</p>
-  <!-- Add a picture of a dinosaur fossil here -->
-  <img src="dino-fossil-picture.jpg" alt="Dinosaur fossil with furcula">
+  <!-- pic3 -->
+  <img src="dinochicken.jpg" alt="Dinosaur fossil with furcula">
     <p>So, the furcula is like a time-traveling bone, connecting the flying dinosaurs of the past to the birds we see today. It’s a reminder of how incredible evolution is and how animals have adapted over millions of years to conquer the skies.</p>
-  <!-- Add small text at the bottom -->
+  
   <footer> @2024 Dillon Smith
