--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Furcula</title>
-  <style>
-    /* Add some basic styling to make the page look decent */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    img {
-      width: 50%; /* Make images 50% of the page width */
-      margin: 20px;
-      border: 1px solid #ccc;
-    }
-  </style>
+    <meta charset="utf-8">
+    <title>uhDill.github.io</title>
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
-  <h1>The Furcula</h1>
-  
-  <!-- Add a picture of a dinosaur here -->
-  <img src="dino-picture-1.jpg" alt="Dinosaur with furcula">
-  
-  <p>The wishbone, or furcula, is like a secret superhero bone found in birds. Imagine it as a V-shaped bone that helps birds fly better. But here’s the really cool part: this bone has been around for a super long time, even before birds!</p>
-  
-  <p>Way back when dinosaurs roamed the Earth, some of them had furculas too. It's like they had a sneak peek of what was to come – birds! Scientists think that the furcula might have been one of the first steps towards birds learning to fly. So, in a way, dinosaurs were the pioneers of flight!</p>
-  
-  <!-- Add a picture of a bird here -->
-  <img src="bird-picture-1.jpg" alt="Bird with furcula">
-  
-  <p>Now, if we look at the furcula of dinosaurs and compare it to birds today, we see some amazing similarities. Both have this V-shape that helps make their wings stronger. It's like having a built-in support system for flying. Plus, both dinosaurs and birds use their furcula for muscles that help them flap their wings, giving them the power to soar through the sky.</p>
-  
-  <p>But there are some differences too. Some dinosaurs had furculas that weren’t as developed as those of birds. This might mean they didn’t fly the same way modern birds do. And if you look at different bird species, you’ll notice that their wishbones can look really different. That’s because each bird has its own special way of flying, and their furcula helps them do it just right.</p>
-  
-  <!-- Add a picture of a dinosaur fossil here -->
-  <img src="dino-fossil-picture.jpg" alt="Dinosaur fossil with furcula">
-  
-  <p>So, the furcula is like a time-traveling bone, connecting the flying dinosaurs of the past to the birds we see today. It’s a reminder of how incredible evolution is and how animals have adapted over millions of years to conquer the skies.</p>
+    <header>
+        <img src="images/dillphoto.JPG" alt="Photo of Dillon" width="250" height="250">
+        <h1 class="shadow">Welcome to my web site.</h1>
+        <h2 class="shadow">uhDill.github.io</h2>
+    </header>
+    <main>
+    <h3 class = "clear">My name is Dillon Smith and I am a senior MIS major. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </h3>
+<nav>
+        <ul id=“list”>
+            <li><strong>Education:</strong> Jersey Village HighSchool (2019), University of Houston (2020), Sam Houston State University <i>(Graduating 2024).</i></li>
+            <li><strong>Work Experience:</strong> Logistics, Harbor Freight; Bartender: Warpig BBQ.</li>
+            <li><strong>Knowledge and Skills:</strong>  Detail-oriented, Focused, Organized, Adaptable, Collaborator, Team player, Curious, Dedicated,
+                Hardworking, Active Listener, Well-versed in Microsoft Office Suite, Positive attitude, Enjoys working with people.</li>
+            <li><a href ="#"> <strong>Class Projects</strong></a></li>
+        </ul>
+    </nav>
+    <div class="contact">
+    <p>Click here to download my <a href="files/Dillon_Smith_Resume.pdf" target ="_blank">resume.</a></p>
+    <p>Click here to go to my <a href = "https://www.linkedin.com/in/the-dillon-smith/" target ="_blank">LinkedIn profile.</a></p>
+    <p>Contact me at <a href = "mailto:dillonjsmith11@gmail.com">dillonjsmith11@gmail.com </a>for any inquirires.</p>
+    </div>
+    </main>
+    <br>
+    <hr>
+    <footer>
+        <p class=“copyright”>&copy;  2024 Dillon Smith</p>
+    </footer>
 </body>
 </html>
