--- a/rwd.html
+++ b/rwd.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RWD</title>
-    <link rel="stylesheet" href="rwd.css">
+    <link rel="stylesheet" href="styles/rwd.css">
 </head>
 
 <body>
